# aero-prox

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  api.txt  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/: api.md  architecture.md  index.md  installation.md  testing.md  usage.md
src/: calculator.py  flight_logger.py  main.py  sky_compass.py  tracker.py
tests/: __init__.py  conftest.py  test_calculator.py  test_flight_logger.py  test_main.py  test_sky_compass.py  test_tracker.py
